--- a/requirements.txt
+++ b/requirements.txt
@@ -14,16 +14,19 @@
 
 # Python >= 3.8 required
 
-# Core geospatial
-geopandas>=0.11.0,<0.13.0
-Shapely>=1.8.2,<2.0.0
-fiona>=1.8.0,<2.0.0
-
-# Data processing
-numpy>=1.23.1
-pandas>=1.4.3
-scipy>=1.8.1
-
-# Array processing & NetCDF
-xarray>=2022.3.0
-netCDF4>=1.7.2
+geopandas==0.12.1
+Shapely==1.8.5
+fiona==1.8.22
+cftime
+numpy== 1.23.5  
+pandas== 1.5.2
+scipy==1.9.3 
+xarray== 0.20.1 
+netCDF4 
+pyproj==3.4.0 
+libtiff=4.5.1
+libgdal=3.6.4
+rasterio==1.3.7
+# rioxarray==0.14.1   
+pyogrio
+rtree==1.0.1
